feat: add get reservation by user id
