# models/reservation.go
@@ -35,17 +35,16 @@ func (h *ReservationHandler) CreateReservation(userID uint, reservation *Reserva
 }
 
 func (h *ReservationHandler) GetReservation(id uint) (*Reservation, error) {
-    var reservation Reservation
-    result := h.db.Preload("User").Preload("Restaurant").First(&reservation, id)
-    return &reservation, result.Error
+	var reservation Reservation
+	result := h.db.Preload("User").Preload("Restaurant").First(&reservation, id)
+	return &reservation, result.Error
 }
 
 func (h *ReservationHandler) GetReservations() ([]Reservation, error) {
-    var reservations []Reservation
-    result := h.db.Preload("User").Preload("Restaurant").Find(&reservations)
-    return reservations, result.Error
+	var reservations []Reservation
+	result := h.db.Preload("User").Preload("Restaurant").Find(&reservations)
+	return reservations, result.Error
 }
-
 
 func (h *ReservationHandler) UpdateReservation(id uint, reservation *Reservation) error {
 	result := h.db.Model(&Reservation{}).Where("id = ?", id).Updates(reservation)
@@ -55,4 +54,14 @@ func (h *ReservationHandler) UpdateReservation(id uint, reservation *Reservation
 func (h *ReservationHandler) DeleteReservation(id uint) error {
 	result := h.db.Delete(&Reservation{}, id)
 	return result.Error
+}
+
+func (handler *ReservationHandler) GetReservationsByUserID(userID uint) ([]Reservation, error) {
+	var reservations []Reservation
+	result := handler.db.Preload("User").Preload("Restaurant").Where("user_id = ?", userID).Find(&reservations)
+
+	if result.Error != nil {
+		return nil, result.Error
+	}
+	return reservations, nil
 }
